--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
+    "stylis": "^4.1.1",
+    "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
