--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bootstrap": "^5.2.0",
     "joi": "^17.6.0",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
+    "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
