--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.1.1",
