--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "joi": "^17.6.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "lottie-web": "^5.9.6",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.3.0",
     "react-router-dom": "^6.3.0",
+    "react-router-loading": "^1.0.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5",
